<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- groupId>palisades-lakes</groupId -->
  <artifactId>mop</artifactId>
  <description>meshes (mostly simplicial), their optimization, and viewers
  </description>
  <version>0.0.1</version>
  <parent>
    <groupId>palisades-lakes</groupId>
    <artifactId>palisades-lakes-parent</artifactId>
    <version>0.0.11</version>
  </parent>
  <properties>
    <maven.compiler.release>25</maven.compiler.release>
    <gt.version>34.3</gt.version>
    <maven.deploy.skip>true</maven.deploy.skip>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>com.theoryinpractise</groupId>
        <artifactId>clojure-maven-plugin</artifactId>
        <version>${clojure-maven-version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>clojure-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
          <execution>
            <id>clojure-test</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <!--
          ought to be allow-native-access=ALL_UNNAMED or some module name
          but 'ALL_UNNAMED' warns it's an unknown module,
          and all the other module names I can think of generate more warnings
          -->
          <vmargs>--sun-misc-unsafe-memory-access=allow --illegal-native-access=allow ${clojure.vmargs}</vmargs>
          <clojureOptions>${clojure.options}</clojureOptions>
          <namespaces>
            <namespace>!mop.test.*</namespace>
          </namespaces>
          <copiedNamespaces>
            <namespace>!.*</namespace>
          </copiedNamespaces>
          <testNamespaces>
            <namespace>!mop.test.defs.*</namespace>
          </testNamespaces>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <configuration>
          <source>${java-version}</source>
          <target>${java-version}</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
           </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-bom</artifactId>
        <version>${gt.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit-jupiter-version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>${commons-text-version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io-version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava-version}</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>tools.jackson.core</groupId>-->
<!--      <artifactId>jackson-core</artifactId>-->
<!--      <version>${fasterxml-jackson-version}</version>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${fasterxml-jackson-version}</version>
      <scope>compile</scope>
    </dependency>


    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>data.json</artifactId>
      <version>${clojure-data-json-version}</version>
    </dependency>

    <dependency>
      <groupId>it.geosolutions.imageio-ext</groupId>
      <artifactId>imageio-ext-tiff</artifactId>
      <!--     <version>${imageio-ext-version}</version> -->
      <version>2.1-PALISADES-LAKES</version>
      <exclusions>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.drewnoakes</groupId>
      <artifactId>metadata-extractor</artifactId>
      <version>${metadata-extractor-version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-geometry-core</artifactId>
      <version>${commons-geometry-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-geometry-euclidean</artifactId>
      <version>${commons-geometry-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-geometry-spherical</artifactId>
      <version>${commons-geometry-version}</version>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>math.combinatorics</artifactId>
      <version>${clojure-combinatorics-version}</version>
      <exclusions>
        <!-- early versions of clojure 1.12 have vulnerabilities -->
        <exclusion>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>${lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <version>${lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <version>${lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <version>${lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <version>${lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <version>${lwjgl.version}</version>
    </dependency>

    <dependency>
      <groupId>org.tinfour</groupId>
      <artifactId>TinfourCore</artifactId>
      <version>${tinfour-version}</version>
    </dependency>
    <!--
    <dependency>
      <groupId>org.tinfour</groupId>
      <artifactId>TinfourDemo</artifactId>
      <version>${tinfour-version}</version>
    </dependency>
    -->

    <dependency>
      <groupId>org.locationtech.jts</groupId>
      <artifactId>jts-core</artifactId>
      <version>${jts-version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-main</artifactId>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tools.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-shapefile</artifactId>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tools.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-epsg-hsql</artifactId>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>tools.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.geotools</groupId>-->
<!--      <artifactId>gt-image</artifactId>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>com.google.guava</groupId>-->
<!--          <artifactId>guava</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.geotools</groupId>-->
<!--      <artifactId>gt-geotiff</artifactId>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>com.google.guava</groupId>-->
<!--          <artifactId>guava</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>${java-version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${java-version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${java-version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>${java-version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>${java-version}</version>
    </dependency>

  </dependencies>
</project>
